--- a/charts/kubernetes-external-secrets/templates/rbac.yaml
+++ b/charts/kubernetes-external-secrets/templates/rbac.yaml
@@ -34,6 +34,9 @@ rules:
     resources: ["customresourcedefinitions"]
     verbs: ["create"]
   {{- end }}
+  {{- if .Values.customClusterRoles }}
+  {{- toYaml .Values.customClusterRoles | nindent 2 }}
+  {{- end }}
 ---
 {{ if semverCompare ">=1.17.0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: rbac.authorization.k8s.io/v1
